src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.header {
  font-family: "Neonderthaw", cursive;
  font-weight: 400;
  font-style: normal;
  font-size: 60px;
}

.karla {
  font-family: "Karla", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

.bebas-neue-regular {
  font-family: "Bebas Neue", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.crafty {
  font-family: "Crafty Girls", cursive;
  font-weight: 400;
  font-style: normal;
}
/* ... */

